--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
                        <strong>Shengqiong Wu</strong>, Weicai Ye, Jiahao Wang, Quande Liu, Xintao Wang, Pengfei Wan, Di Zhang, Kun Gai, Shuicheng Yan, Hao Fei, Tat-Seng Chua.&nbsp&nbsp<em>Any2Caption: Interpreting Any Condition to Caption for Controllable Video Generation</em>. <strong>arxiv</strong>. 2025.&nbsp&nbsp<a href="https://sqwu.top/Any2Cap/">[Project]</a><a href="https://arxiv.org/abs/2503.24379">[pdf]</a>
                       </li>
                       <li>
-                        Hao Fei, Yuan Zhou, Juncheng Li, Xiangtai Li, Qingshan Xu, Bobo Li, <strong>Shengqiong Wu</strong>, Yaoting Wang, Junbao Zhou,et al.&nbsp&nbsp<em>On Path to Multimodal Generalist: General-Level and General-Bench</em>. <strong>arxiv</strong>. 2025.&nbsp&nbsp<a href="https://generalist.top/">[Project]</a><a href="https://arxiv.org/abs/2505.04620">[pdf]</a>
+                        Hao Fei, Yuan Zhou, Juncheng Li, Xiangtai Li, Qingshan Xu, Bobo Li, <strong>Shengqiong Wu</strong>, Yaoting Wang, Junbao Zhou,et al.&nbsp&nbsp<em>On Path to Multimodal Generalist: General-Level and General-Bench</em>. <strong>ICML</strong>. 2025.&nbsp&nbsp<a href="https://generalist.top/">[Project]</a><a href="https://arxiv.org/abs/2505.04620">[pdf]</a>
                       </li>
                       <li>
                         Yaoting Wang, <strong>Shengqiong Wu</strong>, Yuechen Zhang, William Wang, Ziwei Liu, Jiebo Luo, Hao Fei.&nbsp&nbsp<em>Multimodal Chain-of-Thought Reasoning: A Comprehensive Survey</em>. <strong>arxiv</strong>. 2025.&nbsp&nbsp<a href="https://github.com/yaotingwangofficial/Awesome-MCoT">[Code]</a><a href="https://arxiv.org/abs/2503.12605">[pdf]</a>
