--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
               <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20" style="background-color: rgb(247, 248, 249);">
                 <tr>
                   <td width="100%" valign="middle">
-                    <li><span style="color: red;">[NEW!-2025/11]</span>🚀 We develop a <a href="https://univa.online/">Universal Video Agent</a> towards Open-Source Next-Generation Video Generalist</li>
+                    <li><span style="color: red;">[NEW!-2025/11]</span>🚀 We develop a <a href="https://univa.online/">Universal Video Agent</a> towards Open-Source Next-Generation Video Generalist.</li>
                     <li><span style="color: red;">[NEW!-2025/10]</span>🥳🥳🥳 I'm co-organizing the Workshop on <a href="https://scene-graph.github.io/SG4SI-WACV26/">Scene Graph on Structured Intelligence</a> at WACV 2026. Welcome Submissions and Presentations!🤓</li>
                     <li> <span style="color: red;">[NEW!-2025/06]</span> 🚀 Just launched an <a href="https://github.com/ChocoWu/Awesome-Scene-Graph-Generation">open discussions</a> on the future of <b>scene graphs</b> and <b>scene understanding</b>. Let us know what you think in the discussion thread! </li>
                     <li> <span style="color: red;">[NEW!-2025/06]</span> 📣 We host a <b>grand Challenge</b> in <a href="https://mllm-mucg.github.io/MM2025/">MUCG Workshop</a>, welcome to partcipate. ✨ Top teams will be awarded certificates + cash prizes! </li>
