--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                         <tr>
                             <td width="70%" valign="middle">
                               <h1 style="color: #ff8800; font-family: 'Exo 2', sans-serif;" >Shengqiong Wu (<font face="STXingkai">吴胜琼</font>)</h1> <br>
-                              Ph.D. Candidate <br>
+                              Ph.D. <br>
                               NExT++ Research Center<br>
                               National University of Singapore<br>
                               <br>
@@ -412,6 +412,8 @@
               <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20" style="background-color: rgb(247, 248, 249);">
                 <tr>
                   <td width="100%" valign="middle">
+                    <li><span style="color: red;">[NEW!-2026/01]</span>🚀 I'm co-organizing the Workshop on <a href="https://a2a-mml-2026.vercel.app/">ANY-TO-ANY MULTIMODAL LEARNING</a> at CVPR 2026. Welcome Submissions and Presentations!</li>
+                    <li><span style="color: red;">[NEW!-2026/01]</span>🚀 I maintain a github repo focusing on <a href="https://github.com/any2any-mllm/awesome-any2any">ANY-TO-ANY MULTIMODAL GENERATION</a>. Welcome to check it out, contribute, and share any resources or insights</li>
                     <li><span style="color: red;">[NEW!-2025/11]</span>🚀 We develop a <a href="https://univa.online/">Universal Video Agent</a> towards Open-Source Next-Generation Video Generalist.</li>
                     <li><span style="color: red;">[NEW!-2025/10]</span>🥳🥳🥳 I'm co-organizing the Workshop on <a href="https://scene-graph.github.io/SG4SI-WACV26/">Scene Graph on Structured Intelligence</a> at WACV 2026. Welcome Submissions and Presentations!🤓</li>
                     <li> <span style="color: red;">[NEW!-2025/06]</span> 🚀 Just launched an <a href="https://github.com/ChocoWu/Awesome-Scene-Graph-Generation">open discussions</a> on the future of <b>scene graphs</b> and <b>scene understanding</b>. Let us know what you think in the discussion thread! </li>
