--- a/index.html
+++ b/index.html
@@ -275,11 +275,10 @@
                         <tr>
                             <td width="70%" valign="middle">
                               <h1 style="color: #ff8800; font-family: 'Exo 2', sans-serif;" >Shengqiong Wu (<font face="STXingkai">吴胜琼</font>)</h1> <br>
-                              Ph.D. <br>
-                              NExT++ Research Center<br>
-                              National University of Singapore<br>
+                              Postdoctoral Researcher <br>
+                              University of Oxford<br>
                               <br>
-                              <a href="mailto:swu@u.nus.edu">
+                              <a href="mailto:shengqiong.wu@cs.ox.ac.uk">
                                 <i class="fa fa-envelope" aria-hidden="true" style="font-size: 24px;"></i>
                               </a>
                               <a href="https://scholar.google.com/citations?user=RJJLKR0AAAAJ">
@@ -313,13 +312,11 @@
               <h2 class="title">About Me</h2>
             </div>
 
-            <p>I am currently a fourth-year Ph.D. student at <a href="https://www.nextcenter.org/">NExT++</a> Research Center, advised by Prof. <a href="https://www.chuatatseng.com/">Tat-Seng Chua</a> in <a href="https://www.comp.nus.edu.sg">School of Computing</a> at <a href="https://www.nus.edu.sg">National University of Singapore</a>. Prior to this, I received both my M.S. and B.S. degrees from <a href="https://www.whu.edu.cn/">Wuhan University</a>.
+            <p>I am currently a Postdoctoral Researcher at Department of Computer Science, University of Oxford, working with Prof. <a href="https://www.cs.ox.ac.uk/people/michael.wooldridge/">Michael Wooldridge</a>. Prior to this, I obtained my Ph.D. degree at <a href="https://www.nextcenter.org/">NExT++</a> Research Center, advised by Prof. <a href="https://www.chuatatseng.com/">Tat-Seng Chua</a> in <a href="https://www.comp.nus.edu.sg">School of Computing</a>, <a href="https://www.nus.edu.sg">National University of Singapore</a>. I received both my M.S. and B.S. degrees from <a href="https://www.whu.edu.cn/">Wuhan University</a>.
             </p>
-            <p>
-              My research focuses on <strong>Large Vision-Language Foundation Models</strong>, with particular interest in advancing their <strong>capability</strong>, <strong>controllability</strong>, <strong>evaluability</strong>, and <strong>robust, reliable reasoning</strong>.
-              I am also broadly interested in Natural Language Processing.
+            <p>My research focuses on <strong>Large Vision-Language Foundation Models</strong>, particularly their <strong>capability</strong>, <strong>controllability</strong>, <strong>evaluability</strong>, and <strong>robust, reliable reasoning</strong>. I am also actively working on <strong>multi-agent systems</strong> and their integration with foundation models. More broadly, I am interested in Natural Language Processing and intelligent agent research.
             </p> 
-            <p>I welcome collaboration opportunities. Feel free to reach out if you are interested in my research.</p>
+            <p>I am always happy to discuss potential collaborations — please feel free to drop me an email.</p>
             
             <span style="font-family:Papyrus, Fantasy , sans-serif; font-size: medium; margin-bottom: 10px; color: rgb(179,81,1);"><b>Some of my representive work:</b></span>
 
@@ -689,7 +686,7 @@
             <tr>
               <td width="90%">
                   <br>
-                  Dec. 2024 - Now &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <b>Kuaishou</b></a>, Remote<br>
+                  Dec. 2024 - Dec.2025 &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp <b>Kuaishou</b></a>, Remote<br>
                     &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp VGI Research Intern <br>
                     &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Advisor: <a href="https://ywcmaike.github.io/"> Weicai Ye</a>, <a href="https://xinntao.github.io/">Xintao Wang</a> <br>
               </td>
@@ -796,7 +793,7 @@
                   <tr>
                     <td width="90%">
                         <br>
-                        <strong>Aug. 2022 - Now</strong> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp  School of Computing, &nbsp <strong>National University of Singapore</strong>, &nbsp Singapore<br>
+                        <strong>Aug. 2022 - Dec. 2025</strong> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp  School of Computing, &nbsp <strong>National University of Singapore</strong>, &nbsp Singapore<br>
                         &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp Ph.D. in Computer Science <br> 
                     </td>
                     <td width="10%">
